Fixed spacing issue in ANSWERS.md

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -300,5 +300,9 @@ body {
 }
 .carousel img {
   width: 100%;
-  display: none;
+  position: absolute;
+  top: 1000px;
+}
+.carousel img current {
+  top: 0px;
 }
