--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -36,6 +36,12 @@
   }
   img {
     .width-100();
-    display: none;
+    // display: none;
+    position: absolute;
+    top: 1000px;
+
+    current {
+      top: 0px;
+    }
   }
 }
